# glimpse

./: .env.example  .gitignore  Home.py  MIGRATION_SUMMARY.md  README.md  ai_analyzer.py  api.py  app.py  chat_handler.py  embeddings.py  pyproject.toml  run.py  vector_db.py  verify_imports.py  video_processor.py
archive/: api.py  custom_types.py  embeddings.py  reranker.py  vector_db.py
desktop/: README.md  electron.vite.config.ts  package.json  tailwind.config.js
desktop/electron/: main.ts  preload.ts
desktop/electron/ipc/: backend.ts  chat.ts  config.ts  dialog.ts  index.ts  search.ts  settings.ts  videos.ts
desktop/electron/store/: config.ts
desktop/src/: App.vue
desktop/src/router/: index.ts
desktop/src/stores/: backend.ts  chat.ts  library.ts  search.ts  settings.ts  ui.ts  videoPlayer.ts
desktop/src/types/: backend.ts  chat.ts  electron.d.ts  video.ts  (+2 more)
docs/: STITCH_UI_PROMPT.md  STITCH_UI_PROMPT_CONDENSED.md
docs/architecture/: overview.md  techspec.txt
docs/plans/: CASCADED_RERANKING_PLAN.md  PLAN.md
pages/: chat.py  library.py  search.py
src/: main.py
src/ai_analysis/: service.py
src/chat/: service.py
src/core/: config.py  constants.py  exceptions.py  logging.py
src/embeddings/: service.py
src/models/: chat.py  common.py  search.py  video.py
src/search/: vector_db.py
src/utils/: prompts.py  retry.py
src/video_processing/: service.py
streamlit_deprecated/: app.py  main.py
streamlit_deprecated/pages/: chat.py  library.py  search.py
tests/: conftest.py
tests/integration/: test_cascaded_reranking.py  test_rrf_search.py
(+53 files in other folders)
